--- a/src/Views/TurnSimulatorView.css
+++ b/src/Views/TurnSimulatorView.css
@@ -1,4 +1,5 @@
 .turn-simulator-view {
+  flex: 1;
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
